--- a/assets/styles/lib/_vertical-rhythm.styl
+++ b/assets/styles/lib/_vertical-rhythm.styl
@@ -6,10 +6,12 @@
 // 4. There is no h-borders alias. Use horizonatal-borders instead.
 
 // The base font size.
-base-font-size ?= 16px
+//base-font-size ?= 16px
+base-font-size = $font-size-base
 
 // The base line height determines the basic unit of vertical rhythm.
-base-line-height ?= 24px
+//base-line-height ?= 24px
+base-line-height = $line-height-base-inherit
 
 // Set the default border style for rhythm borders.
 default-rhythm-border-style ?= solid
@@ -73,6 +75,7 @@ establish-baseline(font-size = base-font-size)
   html, html body
     font-size font-size
     font-size 100% * (font-size / browser-default-font-size)
+    font-family $font_one
     adjust-leading-to 1, relative-font-sizing ? font-size : base-font-size
 
 // Show a background image that can be used to debug your alignments.
