--- a/assets/styles/layouts/_base.styl
+++ b/assets/styles/layouts/_base.styl
@@ -89,14 +89,25 @@ input {
 input:not([type="submit"]):not([type="file"]):not([type="image"]) {
   box-sizing: border-box
 }
+
+.button-style,  
 .pager li a,
 button,
 input[type="submit"] {
-  //
+  border: none
+  background: $color_three
+  color: $color_one
+  padding: 7px 15px
+  text-decoration: none
+  &:hover {
+    background: $color_two
+  }
 }
+
+.placeholder,  
 input::-webkit-input-placeholder,
 input:-moz-placeholder {
-  //
+  color: $color_two_alt_two
 }
 .webform-container-inline.webform-datepicker {
   white-space: nowrap
@@ -191,5 +202,17 @@ input::-moz-focus-inner {
     > a:hover {
       color: $dropdown-link-active-color
     }
+  }
+}
+
+//// MEDIA width 100%
+iframe {
+  width: 100%
+  min-height: 200px
+  +above($break_one) {
+    min-height: 350px
+  }
+  +above($break_two) {
+    min-height: 500px
   }
 }
