--- a/assets/styles/layouts/_struct.styl
+++ b/assets/styles/layouts/_struct.styl
@@ -1,21 +1,19 @@
-stickyfooter($footer-height, ".root", ".rootfooter", ".footer.content-info")
 
 .container {
-  center($break_max.w, $break_max.p)
+  lost-center: $break_max.w
+  //center($break_max.w, $break_max.p)
 }
 
 //// HEADER
 header.banner {
   .logo {
     +above($break_one) {
-      col(1/6)
-      column('1/6')
+      lost-column: 1/4
     }
   }
   .navigation-container {
     +above($break_one) {
-      col(5/6)
-      column('5/6')
+      lost-column: 3/4
     }
   }
 }
@@ -23,30 +21,18 @@ header.banner {
 //// CONTENT
 .wrap.container {
   main.main {
-    col(3/3)
-    column('3/3')
+    lost-column: 3/3
     .sidebar-primary & {  // if has sidebar
       +above($break_one) {
-        col(2/3)
-        column('2/3')
-       // move('1/3') // switch main and sidebar
+        lost-column: 2/3
       }
     }
   }
   //// SIDEBAR
   aside.sidebar {
-    col(3/3)
-    column('3/3')
+    lost-column: 3/3
     +above($break_one) {
-      col(1/3)
-      column('1/3')
-      // move('-2/3') // switch main and sidebar
+      lost-column: 1/3
     }
   }
-}
-
-//// FOOTER
-footer.content-info {
-  box-sizing: border-box
-  height: $footer-height
 }
