--- a/assets/styles/lib/_tcon.styl
+++ b/assets/styles/lib/_tcon.styl
@@ -1,22 +1,16 @@
 /** TCON */
-$tcon-line-size ?= 2px ////4.01429px;
-$tcon-width ?= 22px
-$tcon-height ?= 40px
-$tcon-border-radius ?= 0 //2.85714px
-$tcon-transition-speed ?= 0.3s
-$tcon-space-between-lines ?= 6px
 
 .tcon {
   appearance: none;
   border: none;
   cursor: pointer;
-  //display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: $tcon-height;
-  transition: $tcon-transition-speed ;
+  height: 40px;
+  transition: 0.3s;
   user-select: none;
-  width: $tcon-width;
+  width: 40px;
   background: transparent; }
 .tcon > * {
   display: block; }
@@ -25,32 +19,29 @@ $tcon-space-between-lines ?= 6px
 
 .tcon-menu__lines {
   display: inline-block;
-  height: $tcon-line-size;
-  width: $tcon-width;
-  border-radius: $tcon-border-radius;
+  height: 4.01429px;
+  width: 40px;
+  border-radius: 2.85714px;
   transition: 0.3s;
-  background: $navbar-default-toggle-icon-bar-bg;
-  position: relative;
-  vertical-align: middle;
-}
+  background: black;
+  position: relative; }
 .tcon-menu__lines::before, .tcon-menu__lines::after {
   display: inline-block;
-  height: $tcon-line-size;
-  width: $tcon-width;
-  border-radius: $tcon-border-radius;
+  height: 4.01429px;
+  width: 40px;
+  border-radius: 2.85714px;
   transition: 0.3s;
-  background: $navbar-default-toggle-icon-bar-bg;
+  background: black;
   content: '';
   position: absolute;
   left: 0;
   transform-origin: 2.85714px center;
- }
+  width: 100%; }
 .tcon-menu__lines::before {
-  top: $tcon-space-between-lines;
+  top: 10px;
 }
 .tcon-menu__lines::after {
-  top: (0 - $tcon-space-between-lines)
-}
+  top: -10px; }
 .tcon-transform .tcon-menu__lines {
   -webkit-transform: scale3d(.8, .8, .8);
   transform: scale3d(.8, .8, .8); }
@@ -67,7 +58,7 @@ $tcon-space-between-lines ?= 6px
   top: 0;
   transition: top .3s ease, -webkit-transform .3s .2s ease;
   transition: top .3s ease, transform .3s .2s ease;
-  width: $tcon-width; }
+  width: 40px; }
 .tcon-menu--xbutterfly.tcon-transform .tcon-menu__lines::before {
   transform: rotate3d(0, 0, 1, 45deg); }
 .tcon-menu--xbutterfly.tcon-transform .tcon-menu__lines::after {
@@ -89,9 +80,4 @@ $tcon-space-between-lines ?= 6px
   overflow: visible;
   position: static;
   width: auto;
-}
-.tcon-menu__name {
-  // margin-right: 6px;
-  // margin-bottom: -3px;
-  vertical-align: sub;
 }
