--- a/assets/styles/layouts/_base.styl
+++ b/assets/styles/layouts/_base.styl
@@ -95,14 +95,12 @@ input:not([type="submit"]):not([type="file"]):not([type="image"]) {
 .pager li a,
 button,
 input[type="submit"] {
-  //
   border: none
   background: $color_three
   color: $color_one
 }
-input::-webkit-input-placeholder,
-input:-moz-placeholder {
-  //
++placeholder() {
+  color: $color_two_alt_two
 }
 .webform-container-inline.webform-datepicker {
   white-space: nowrap
