--- a/assets/styles/variables/_bootstrap-vars.styl
+++ b/assets/styles/variables/_bootstrap-vars.styl
@@ -59,8 +59,9 @@ $font-size-h5 ?=           $font-size-base
 $font-size-h6 ?=           ceil($font-size-base * 0.85) // ~12px
 
 //** Unit-less `line-height` for use in components like buttons.
-$this-line  =  ceil(base-font-size-nr / base-line-height-nr )
-$line-height-base ?=     1em * ($this-line * base-line-height) / base-font-size //1.428571429 // 20/14 // golden = 1.61803399
+//$this-line  =  ceil(base-font-size-nr / base-line-height-nr )
+$line-height-base ?=    base-line-height // 1em * ($this-line * base-line-height) / base-font-size //1.428571429 // 20/14 // golden = 1.61803399
+
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed ?=   floor($font-size-base * $line-height-base) // ~20px
 
