--- a/assets/styles/lib/_bootstrap.styl
+++ b/assets/styles/lib/_bootstrap.styl
@@ -10,7 +10,8 @@
 @import "bootstrap/glyphicons"
 
 // Core CSS
-@import "bootstrap/scaffolding"
+// @import "bootstrap/scaffolding" // alter below
+@import "variables/_scaffolding-alter"
 @import "bootstrap/utilities"
 //@import "bootstrap/type" // alter below
 @import "bootstrap/code"
