--- a/assets/styles/variables/_bootstrap-vars.styl
+++ b/assets/styles/variables/_bootstrap-vars.styl
@@ -47,7 +47,7 @@ $font-family-serif ?=      $default_font_serif
 $font-family-monospace ?=  $default_font_monospace
 $font-family-base ?=       $font-family-sans-serif
 
-$font-size-base ?=         base-font-size
+$font-size-base ?=         1rem
 $font-size-large ?=        ceil($font-size-base * 1.25) // ~18px
 $font-size-small ?=        ceil($font-size-base * 0.85) // ~12px
 
