--- a/assets/styles/lib/_schitterend.styl
+++ b/assets/styles/lib/_schitterend.styl
@@ -3,18 +3,42 @@
 @import 'nib'
 @import 'axis'
 
-$alllink = "a, a:link, a:visited"
-$alllink_child = "> a, > a:link, > a:visited"
-$allh = "h1, h2, h3, h4, h5, h6"
 
-nobuttonstyle() {
+// Named ratios - http://modularscale.com
+//http://www.modularscale.com/?15&px&1.618&web&table
+
+double_octave = 4 / 1.0
+major_twelfth = 3 / 1.0
+major_eleventh = 8 / 3.0
+major_tenth = 5 / 2.0
+octave = 2 / 1.0
+major_seventh = 15 / 8.0
+minor_seventh = 16 /9.0
+major_sixth = 5 / 3.0
+minor_sixth = 8 / 5.0
+fifth = 3 / 2.0
+augmented_fourth = 1.414
+golden = 1.6180339887
+fourth = 4 / 3.0
+major_third = 5 / 4.0
+minor_third = 6 / 5.0
+major_second = 9 / 8.0
+minor_second = 16 / 15.0
+
+modular_scale = golden
+
+msc(step = 0, ratio = modular_scale) {
+  return ratio ** step * base-font-size px //Exponent **
+}
+
+no-button-style() {
   background: transparent
   border: none
   border-radius: 0
   appearance: none
 }
 
-noliststyle() {
+no-list-style() {
   list-style: none
   padding-left: 0
   li {
@@ -38,7 +62,7 @@ hyphenation() {
   hyphens: auto
 }
 
-nowordbrake() {
+no-word-brake() {
   word-wrap: no-wrap;
   white-space: nowrap;
 }
@@ -48,7 +72,7 @@ nowordbrake() {
   to {opacity: 1}
 }
 
-setborder( $coordinates = 0 0 0 0, $style = solid, $color = #000000 ) {
+set-border( $coordinates = 0 0 0 0, $style = solid, $color = #000000 ) {
   $top = $coordinates[1]
   $right = $coordinates[2]
   $bottom = $coordinates[3]
@@ -98,30 +122,6 @@ stickyfooter(footerHeight = 50, container = unquote("container"), containerPush 
   }
 }
 
-// Named ratios - http://modularscale.com
-//http://www.modularscale.com/?15&px&1.618&web&table
-
-double_octave = 4 / 1.0
-major_twelfth = 3 / 1.0
-major_eleventh = 8 / 3.0
-major_tenth = 5 / 2.0
-octave = 2 / 1.0
-major_seventh = 15 / 8.0
-minor_seventh = 16 /9.0
-major_sixth = 5 / 3.0
-minor_sixth = 8 / 5.0
-fifth = 3 / 2.0
-augmented_fourth = 1.414
-golden = 1.6180339887
-fourth = 4 / 3.0
-major_third = 5 / 4.0
-minor_third = 6 / 5.0
-major_second = 9 / 8.0
-minor_second = 16 / 15.0
-
-modular_scale = golden
-base-font-size = 15px
-
 msc(step = 0, ratio = modular_scale) {
   return ratio ** step * base-font-size px //Exponent **
 }
@@ -130,33 +130,24 @@ msc(step = 0, ratio = modular_scale) {
   display: none
 }
 
-//// MAKE REM
-remm(n, fallback = true, root = base-font-size) {
-  unless current-property {
-    error('rem() must be used within a property');
+$alllink = "a, a:link, a:visited"
+$alllink_child = "> a, > a:link, > a:visited"
+$allh = "h1, h2, h3, h4, h5, h6"
+
+alllink() {
+  a, a:link, a:visited {
+    {block}
   }
-
-  unless unit(n) is 'px' and unit(root) is 'px' {
-    error('Please use px as a unit');
+}
+alllink_child() {
+  > a, > a:link, > a:visited {
+    {block}
   }
-
-  replace(expr, str, val) {
-    expr = clone(expr);
-
-    for e, i in expr {
-      if str == e {
-        expr[i] = val;
-      }
-    }
-
-    return expr;
+}
+allh() {
+  h1, h2, h3, h4, h5, h6 {
+    {block}
   }
-
-  if fallback {
-    add-property(current-property[0], replace(current-property[1], '__CALL__', n));
-  }
-
-  unit(round((n / root), 4), s('rem'));
 }
 
 placeholder() {
@@ -171,6 +162,15 @@ placeholder() {
   }
   &:-ms-input-placeholder {
     {block}
+  }
+}
+
+ie11(child) {
+  @media all and (-ms-high-contrast: none) {
+  {child},
+  *::-ms-backdrop, {child} {
+      {block}
+    }
   }
 }
 
