--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -1,10 +1,10 @@
 @import 'variables/_globals'
 @import 'lib/*'
-@import 'vertical-rhythm'
 @import 'modular-scale'
 @import 'variables/_vars.styl'
 @import 'layouts/_base'
 @import 'layouts/_struct'
+@import 'layouts/_plugins'
 @import 'layouts/_header'
 @import 'layouts/_main'
 @import 'layouts/_asides'
