--- a/assets/styles/lib/_bootstrap.styl
+++ b/assets/styles/lib/_bootstrap.styl
@@ -10,7 +10,7 @@
 //@import "bootstrap/glyphicons"
 
 // Core CSS
-// @import "bootstrap/scaffolding" // alter below
+// @import "bootstrap/scaffolding"
 @import "variables/_scaffolding-alter"
 @import "bootstrap/utilities"
 //@import "bootstrap/type" // alter below
