--- a/assets/styles/variables/_bootstrap-vars.styl
+++ b/assets/styles/variables/_bootstrap-vars.styl
@@ -88,17 +88,17 @@ $icon-font-svg-id ?=       "glyphicons_halflingsregular"
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-$padding-base-vertical ?=    6px
-$padding-base-horizontal ?=  12px
+$padding-base-vertical ?=    0rem //6px
+$padding-base-horizontal ?=  1.5rem //12px
 
-$padding-large-vertical ?=   10px
-$padding-large-horizontal ?= 16px
+$padding-large-vertical ?=   .3rem //10px
+$padding-large-horizontal ?= 2rem //16px
 
-$padding-small-vertical ?=   5px
-$padding-small-horizontal ?= 10px
+$padding-small-vertical ?=   0rem //5px
+$padding-small-horizontal ?= 1rem //10px
 
-$padding-xs-vertical ?=      1px
-$padding-xs-horizontal ?=    5px
+$padding-xs-vertical ?=      0rem //1px
+$padding-xs-horizontal ?=    .5rem //5px
 
 $line-height-large ?=        1.3333333 // extra decimals for Win 8.1 Chrome
 $line-height-small ?=        1.5
