--- a/assets/styles/variables/_vars.styl
+++ b/assets/styles/variables/_vars.styl
@@ -81,7 +81,7 @@ $caret-width-large = 5px
 $navbar-default-bg = transparent
 
 // Basics of a navbar
-$navbar-height = 5rem
+// $navbar-height = 5rem
 $navbar-padding-vertical = 0
 
 $navbar-default-color = $color_four
