fix vertical rhythm

--- a/assets/styles/lib/_schitterend.styl
+++ b/assets/styles/lib/_schitterend.styl
@@ -1,6 +1,8 @@
 //@import 'lost'
 @import 'rupture'
 @import 'axis'
+@import 'vertical-rhythm'
+@import 'modular-scale'
 
 
 // Named ratios - http://modularscale.com
