--- a/assets/styles/variables/_vars.styl
+++ b/assets/styles/variables/_vars.styl
@@ -12,6 +12,7 @@ $images = '../images/'
 body-font-size = base-font-size
 body-line-height = base-line-height
 desktop-ratio = 1.07
+gutter = default-gutter-size 
 
 
 $font_one = $default_font_sans
