fix default text-color

--- a/assets/styles/variables/_vars.styl
+++ b/assets/styles/variables/_vars.styl
@@ -12,7 +12,7 @@ $images = '../images/'
 body-font-size = base-font-size
 body-line-height = base-line-height
 desktop-ratio = 1.07
-gutter = default-gutter-size 
+gutter = default-gutter-size
 
 
 $font_one = $default_font_sans
@@ -36,6 +36,9 @@ $brand-success = #5cb85c
 $brand-info =  #5bc0de
 $brand-warning = #f0ad4e
 $brand-danger = #d9534f
+
+$text-color = $color_three
+$body-bg = $color_one
 
 $shadow_one = 0 6px 12px rgba(0,0,0,.175)
 $shadow_two = 0 12px 24px rgba(0,0,0,.1)
