--- a/assets/styles/layouts/_header.styl
+++ b/assets/styles/layouts/_header.styl
@@ -1,4 +1,14 @@
 header.banner {
+  .logo {
+    a {
+      display: block
+      background: url($images + 'logo.svg') left top no-repeat
+      background-size: contain
+      min-height: 5rem
+      width: 100%
+      hide-text()
+    }
+  }
   .navbar-header {
     button.navbar-toggle {
       .menu-name,
