--- a/assets/styles/layouts/_struct.styl
+++ b/assets/styles/layouts/_struct.styl
@@ -1,3 +1,4 @@
+sticky-footer-flex()
 
 .container {
   lost-center: $break_max.w
@@ -7,15 +8,15 @@
 //// HEADER
 header.banner {
   .logo {
-    lost-column: 6/12
+    lost-column: 12/12
     +above($break_one) {
-      lost-column: 3/12
+      lost-column: 4/12
     }
   }
   .navigation-container {
-    lost-column: 6/12
+    lost-column: 12/12
     +above($break_one) {
-      lost-column: 9/12
+      lost-column: 8/12
     }
   }
 }
