--- a/assets/styles/variables/_vars.styl
+++ b/assets/styles/variables/_vars.styl
@@ -4,7 +4,7 @@ default-gutter-size = 1.2rem;
 @lost flexbox no-flex;
 @lost cycle auto;
 
-base-font-size = .8rem //unit(base-font-size-nr, 'px')
+base-font-size = 1rem //unit(base-font-size-nr, 'px')
 base-line-height = 1.7 // unit(base-line-height-nr, 'px')
 modular_scale = golden
 $images = '../images/'
@@ -25,7 +25,7 @@ $color_two = #555555 // mainly text
 $color_two_alt = #888 // disable
 $color_two_alt_two = #AAA // shade / placeholder
 $color_three = #69AAEE // main theme color
-$color_three_alt = lighten($color_three, 30%) // #ff7d6e //mainly visited links
+$color_three_alt = lighten($color_three, 14%) // #ff7d6e //mainly visited links
 $color_four = #BBDDDC // active color / click/active table etc
 $color_five = #EDEDED // BG2
 $color_six = $color_three
@@ -37,7 +37,7 @@ $brand-info =  #5bc0de
 $brand-warning = #f0ad4e
 $brand-danger = #d9534f
 
-$text-color = $color_three
+$text-color = $color_two
 $body-bg = $color_one
 
 $shadow_one = 0 6px 12px rgba(0,0,0,.175)
@@ -46,7 +46,7 @@ $shadow_two = 0 12px 24px rgba(0,0,0,.1)
 //** Default background color used for all tables.
 $table-bg = transparent
 $table-bg-accent = $color_one_alt
-$table-bg-hover = $color_three_alt
+$table-bg-hover = $color_two_alt_two
 $table-bg-active = $color_four
 $table-border-color = transparent
 
