--- a/assets/styles/variables/_scaffolding-alter.styl
+++ b/assets/styles/variables/_scaffolding-alter.styl
@@ -24,7 +24,7 @@ html
   -webkit-tap-highlight-color rgba(0, 0, 0, 0)
 
 body
-  font-family $font-family-base
+  font-family $font_one
   font-size 100%
   line-height base-line-height
   color $text-color
