--- a/assets/styles/lib/_schitterend.styl
+++ b/assets/styles/lib/_schitterend.styl
@@ -102,7 +102,7 @@ type-ligatures() {
 }
 
 // Inspired by Compass' sticky-footer() mixin
-stickyfooter(footerHeight = 50, container = unquote("container"), containerPush = unquote("containerPush"), footer = unquote("footer")) {
+sticky-footer(footerHeight = 50, container = unquote("container"), containerPush = unquote("containerPush"), footer = unquote("footer")) {
   html, body {
     height: 100%
   }
