--- a/assets/styles/variables/_vars.styl
+++ b/assets/styles/variables/_vars.styl
@@ -109,7 +109,7 @@ $navbar-default-toggle-icon-bar-bg = $color_three
 
 //=== Shared nav styles
 $nav-link-padding = 2rem 2.5rem
-$nav-link-hover-bg = $color_two_alter
+$nav-link-hover-bg = $color_two_alt
 
 $nav-disabled-link-color = $color_two_alt
 $nav-disabled-link-hover-color = $color_two_alt
