--- a/assets/styles/layouts/_base.styl
+++ b/assets/styles/layouts/_base.styl
@@ -124,16 +124,38 @@ input {
   vertical-align: top
 }
 
+// ALL TYPES:
+// button, checkbox, color, date, datetime, datetime-local, email, file, hidden, image, month
+// number, password, radio, range, reset, search, submit, tel, text, time, url, week
+
+//input:not([type="submit"]):not([type="file"]):not([type="image"]) {
+select,
 textarea,
-input:not([type="submit"]):not([type="file"]):not([type="image"]) {
+input[type="button"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="reset"],
+input[type="submit"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"] {
   appearance: none
   box-sizing: border-box
   border: none
+  border-radius: 0
   padding: .3rem .7rem .4rem .7rem
   background: $color_five
   max-width: 100%
   font-size .9rem
 }
+
 .pager li a,
 button,
 input[type="submit"] {
@@ -143,8 +165,17 @@ input[type="submit"] {
   padding: .3rem .7rem
 }
 
+select {
+  border: 1px solid #eee
+}
+
 +placeholder() {
     color: $color_two
+}
+input[type="search"]:focus {
+  +placeholder() {
+    color: lighten($color_two, 70%)
+  }
 }
 
 input:focus {
