still more tweaks

--- a/assets/styles/layouts/_base.styl
+++ b/assets/styles/layouts/_base.styl
@@ -129,7 +129,7 @@ input {
 // number, password, radio, range, reset, search, submit, tel, text, time, url, week
 
 //input:not([type="submit"]):not([type="file"]):not([type="image"]) {
-select,
+
 textarea,
 input[type="button"],
 input[type="date"],
@@ -167,6 +167,7 @@ input[type="submit"] {
 
 select {
   border: 1px solid #eee
+  border-radius: 0
 }
 
 +placeholder() {
