--- a/assets/styles/variables/_vars.styl
+++ b/assets/styles/variables/_vars.styl
@@ -20,7 +20,7 @@ $font_two = $default_font_sans // mainly headings
 $font_three = Courier, $default_font_monospace
 
 $color_one = #F5F5F5 // mainly bg
-$color_one_alt = #DDD // alterning table rows etx
+$color_one_alt = #EEE // alterning table rows etx
 $color_two = #555555 // mainly text
 $color_two_alt = #888 // disable
 $color_two_alt_two = #AAA // shade / placeholder
