--- a/assets/styles/lib/_schitterend.styl
+++ b/assets/styles/lib/_schitterend.styl
@@ -64,8 +64,9 @@ hyphenation() {
 }
 
 no-word-brake() {
-  word-wrap: no-wrap;
-  white-space: nowrap;
+  word-wrap: no-wrap
+  white-space: nowrap
+  text-overflow ellipsis
 }
 
 @keyframes do-fadein {
