--- a/assets/styles/layouts/_base.styl
+++ b/assets/styles/layouts/_base.styl
@@ -140,6 +140,10 @@ input[type="submit"] {
   padding: 5px 5px
 }
 
+input[type="search"] {
+  box-sizing: border-box
+}
+
 +placeholder() {
     color: $color_two
 }
